--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.11",
+    "socket-io": "^1.0.0",
     "socket.io": "^4.8.1"
   }
 }
