--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.1",
+    "better-sqlite3": "^12.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.10",
@@ -17,5 +19,8 @@
     "nodemon": "^3.1.11",
     "socket-io": "^1.0.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.19.1"
   }
 }
